# golemOS

./: BallManager.h  CMakeLists.txt  Main.cpp  Ports.h
lib/autocontainer/: AutoContainer.h
lib/controlboard/: ControlBoard.h  JoyStickPorts.h
lib/drivers/: BaseTalonChecker.h  LazyTalonFX.h  MotorChecker.h  TalonError.h  TalonFXChecker.h
lib/led/: LEDControler.h  LEDStates.h
lib/loops/: CrashTracker.h  CrashTrackerRunnable.h
lib/swerve/: AutoChassis.h  Chassis.h  WheelModule.h
lib/trajectory/: Trajectory.h
lib/util/: Functions.h  WayiDriverHelper.h
lib/vision/: AprilTags.h  GoalTracker.h
subsystems/: AutoSub.h  BallPipe.h  Drive.h  Intaker.h  SubSys.h
